objects/ManagedAccount__c.object
<CustomObject>
    <fields>
        <fullName>AUMAmount__c</fullName>
        <label>AUM Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <label>Account Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Managed Accounts</relationshipLabel>
        <relationshipName>ManagedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Managed Accounts</relationshipLabel>
        <relationshipName>ManagedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeeCode__c</fullName>
        <label>Fee Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinancialAccount__c</referenceTo>
        <relationshipLabel>Managed Accounts</relationshipLabel>
        <relationshipName>Managed_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpenDate__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductTitle__c</fullName>
        <label>Product Title</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Managed Accounts</relationshipLabel>
        <relationshipName>ManagedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Managed Account</label>
    <nameField>
        <label>Managed Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managed Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Managed_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>AccountName__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>AccountStatus__c</columns>
        <columns>AUMAmount__c</columns>
        <columns>CloseDate__c</columns>
        <columns>Contact__c</columns>
        <columns>FeeCode__c</columns>
        <columns>OpenDate__c</columns>
        <columns>Product__c</columns>
        <columns>ProductTitle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Managed Accounts</label>
        <sharedTo>
            <group>Data_Operations</group>
            <group>MPA_and_Client_Services</group>
            <group>MPA_and_Client_Services_PW_Portal_Users</group>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RSA_Managed_Accounts</fullName>
        <columns>NAME</columns>
        <columns>AccountNumber__c</columns>
        <columns>AccountStatus__c</columns>
        <columns>AUMAmount__c</columns>
        <columns>OpenDate__c</columns>
        <columns>CloseDate__c</columns>
        <columns>Contact__c</columns>
        <columns>FeeCode__c</columns>
        <columns>Product__c</columns>
        <columns>ProductTitle__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>RSA</value>
        </filters>
        <label>RSA Managed Accounts</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
</CustomObject>